[bdist_wheel]
universal = 1

[metadata]
name = pecblocks
version = 0.0.5
author = Tom McDermott, Qiuhua Huang, and Yuan Liu
author_email = T.McDermott@IEEE.org
description = pecblocks: Generalized block diagram modeling of power electronic converters for grid solar and storage applications.
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE.txt
license = BSD
url = https://github.com/pnnl/pecblocks
project_urls =
    Bug Tracker = https://github.com/pnnl/pecblocks/issues
classifiers = 
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Education
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering

[options]
zip_safe = False
include_package_data = True
package_dir =
    = src
install_requires =
    dynonet>=0.1.2
    harold>=1.0.1
    control>=0.9.2
    h5py>=3.7.0

[options.packages.find]
where = src
